# 230

./: README.md
Hw2/.stack-work/install/x86_64-osx/nightly-2015-09-24/7.10.2/flag-cache/: mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb
Hw2/src/: Hw2.hs
Hw3/: Hw3.cabal
Hw3/lhs/: Hw3.lhs
Hw3/src/: Hw3.hs
Hw4/: Hw4.cabal  Hw4.lhs  Interpreter.lhs  KMeans.lhs  List.lhs  Makefile  MapReduce.lhs
hw1/: Hw1.hs
hw1/.stack-work/install/x86_64-osx/nightly-2015-09-24/7.10.2/flag-cache/: GLFW-0.5.2.4-7d7fbd719b13f95b952e6ac68c5a685e  GLURaw-1.5.0.3-8ea16a7e807f72af84e6587fd153f840  Hw1-1.0-f53c287102d17f4ec594408131d20661  ObjectName-1.1.0.1-f7f0974b4e23acace51ca0870e04b4e9  OpenGL-2.13.2.1-be6a65aba3020c89e97977a05f03b066  OpenGLRaw-2.6.1.1-9545cb821d25e3f7a63fae8a6e4f0fb9  StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  binary-0.7.5.0-eba3a15e45698c81a01edb0798415bee  bytestring-0.10.6.0-b9ff0d6700b0a57a038a8005f31447a9  containers-0.5.6.2-f5888c29bd2767530b7faf897354b6bc  deepseq-1.4.1.1-042208470add67f053d8b7adcb6d0129  half-0.2.2.2-d52e7ba74c488842311d9094e0e3a163  old-locale-1.0.0.7-2f3f4311e12e7847c2af472c26151237  old-time-1.1.0.3-87d81aebf328992ede4a450f399e9481  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  text-1.2.1.3-8f782ab30ac731cb525c2a3265d17bed
hw1/.stack-work/install/x86_64-osx/nightly-2015-09-24/7.10.2/pkgdb/: GLFW-0.5.2.4-7d7fbd719b13f95b952e6ac68c5a685e.conf  GLURaw-1.5.0.3-8ea16a7e807f72af84e6587fd153f840.conf  Hw1-1.0-f53c287102d17f4ec594408131d20661.conf  (+10 more)
lec/: lec4.hs  lec5.hs  lec6.hs  lec7.hs  lec8.hs  m.hs  statemonad.hs
lec3/: lec3.hs
(+190 files in other folders)
